# servicemon

./: .gitignore  .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  appveyor.yml  flake_to_wing.py  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml  cibuild.yml
docs/: analysis-api.rst  conf.py  index.rst  servicemon-api.rst
docs/files/: cool_archive_cone_service.py  great_archive_tap_service.py  multiple_services.py  sia_service.py
docs/servicemon/: index.rst
input/: cones-10000-0_05-0_25-rev.py  cones-10000-0_05-0_25.py
input/cds/: cds_2mass_cone.py
input/chandra/: csc_cone.py  csc_tap.py
input/heasarc/: heasarc_cscXupload_tap.py  heasarc_csc_cone.py  heasarc_csc_tap.py  heasarc_nwayawgxmm_votable_small.xml  heasarc_swiftmastr_cone.py  heasarc_swiftmastr_tap.py  heasarc_xmmssc_cone.py  heasarc_xmmssc_tap.py
input/ipac/: ipac_2mass_cone.py  ipac_2mass_tap.py  ipac_wise_cone.py  ipac_wise_tap.py
input/ned/: ned_cone.py  ned_tap.py
input/stsci/: ps_cone.py  ps_tap.py  st_obstap.py  stsci_2mass_cone.py  stsci_wise_cone.py
licenses/: LICENSE.rst
results/CAOM_TAP/: CAOM_TAP_tap_183.9913272495423_73.83789215474813_0.013809651512205201.xml  CAOM_TAP_tap_271.65387349220117_49.22401162657951_0.060027943671249445.xml  CAOM_TAP_tap_294.63275610038716_-14.802450151701855_0.12195203252708428.xml
scripts/: servicemon  servicemon_run_all  servicemon_run_helper  sm_run_all
servicemon/: __init__.py  __main__.py  cone.py  plugin_support.py  pyvo_wrappers.py  query.py  query_runner.py  query_stats.py  run.py  run_utils.py  run_vo.py  timing_labels.py
servicemon/analysis/: __init__.py  basic_plotting.py  plot_pages.py  stat_queries.py
servicemon/analysis/notebooks/: ExplorePerformanceData.ipynb  ExplorePerformanceData_original_columns.ipynb
servicemon/builtin_plugins/: aws_writer.py  csv_writer.py  mongo_writer.py
servicemon/data/: cones.py  csc_tap.py  ps_services.py  ps_tap.py  sample.py  services.py  vo_2mass.py  vo_2mass_gavo_tap.py  vo_2mass_ipac_cone.py  vo_2mass_ipac_tap.py  vo_services.py
servicemon/example_subpkg/: setup_package.py
servicemon/navotap/: __init__.py  core.py
servicemon/tests/: setup_package.py  test_cone.py  test_csv_writer.py  test_plugin_support.py  test_query.py  test_query_runner.py  test_query_stats.py  test_run_utils.py  test_stat_queries.py
servicemon/tests/data/: sample_writer.py
servicemon/tests/data/default_user_plugin_dir/: basic_writer.py  defquery1.py  defwriter1.py  defwriter2.py  import_tester.py
servicemon/tests/data/user_plugin_dir/: cannot_make_reader_instance.py  userquery1.py  userquery2.py
servicemon/utils/: __init__.py  coords.py
servicemon/utils/tests/: test_parse_coordinates.py
