[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,example_mod.py,__init__.py,ah_bootstrap.py,setup.py,conftest.py,setup_package.py,conf.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = servicemon
description = Measure/monitor VO service performance
long_description = Measure/monitor performance of a list of VO services over multiple points.
author = Tom Donaldson
author_email = 
license = BSD 3-Clause
url = http://docs.astropy.org/projects/package-template/
edit_on_github = False
github_project = NASA-NAVO/servicemon
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, astroquery, requests
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[entry_points]

astropy-package-template-example = packagename.example_mod:main

